# phi-patch

./: ARCHITECTURE.md  DEVELOPMENT.md  FEATURES.md  IMPLEMENTATION_STATUS.md  LICENSE  NATIVE_LAYER.md  PROJECT_SUMMARY.md  QUICK_START.md  README.md  SANDVXPOSED_INTEGRATION.md  build.gradle.kts  settings.gradle.kts
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/java/me/achqing/phipatch/: MainActivity.kt
app/src/main/java/me/achqing/phipatch/core/: App.kt  Config.kt  Const.kt  UpdateChecker.kt
app/src/main/java/me/achqing/phipatch/data/: Preference.kt
app/src/main/java/me/achqing/phipatch/ui/: MyIcons.kt
app/src/main/java/me/achqing/phipatch/utils/: Dialog.kt
app/src/main/java/me/achqing/virtuegms/: MainActivity.kt
app/src/main/java/me/achqing/virtuegms/core/: App.kt  Config.kt  Const.kt
app/src/main/java/me/achqing/virtuegms/data/: Preference.kt
app/src/main/java/me/achqing/virtuegms/ui/: MyIcons.kt
app/src/main/res/values/: strings.xml  themes.xml
core/: build.gradle.kts  proguard-rules.pro
core/src/main/java/com/virtue/core/: VirtualCore.java
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
hook/: build.gradle.kts  proguard-rules.pro
hook/src/main/java/com/virtue/hook/: HookManager.java
hook/src/main/java/com/virtue/hook/base/: MethodHook.java
native/: CMakeLists.txt  build.gradle.kts  proguard-rules.pro
native/src/main/cpp/: hook_engine.cpp  hook_engine.h  io_redirect.cpp  io_redirect.h  native_bridge.cpp
native/src/main/java/com/virtue/native/: NativeBridge.java
(+41 files in other folders)
